# 24_Hour_Astroids

./: .gitignore  CMakeLists.txt  README.md
include/headers/: astroid.h  globals.h  ship.h  shot.h  vect2d.h
src/: astroid.cpp  main.cpp  ship.cpp  shot.cpp  vect2d.cpp
